# sql_sqlalchemy

./: README.md
db_docker/: docker-compose.yaml
examples/: basic_select_01.sql  code_wars.sql  console_10.sql  console_11.sql  console_12.sql  console_13.sql  console_2.sql  console_3.sql  console_4.sql  console_9.sql  console_event_16.sql  console_okna_14.sql  console_trigger_15.sql
heores_sql/: heros_of_endiess_war_ch1.ipynb  heros_of_endiess_war_ch2.ipynb
sakila_python/: film.xlsx  from_excel_to_sql.py  pyproject.toml  report.xlsx  sakila_films.xlsx  sql_and_request.py  sql_to_excel.py  sql_to_excel_2.py  sqlalchemy_example_1.py  sqlalchemy_example_2.py  sqlalchemy_example_3_orm.py  sqlalchemy_example_4_sakila_conn.py  sqlalchemy_example_5_generate_table.py  sqllite3_example.py  yolo.db  yolo2.db  yolo3.db  yolo4.db
